# for display continuity sake please use 2 spaces instead of tabs

2012-07-12 Matthias Scholz <ms@jammerhund.de>
  * fix bug 3573079 with the detachable attribute window. Plase read the comment
    in the DetachableInternalFrame.detach() method.

2012-09-29 sstein <sstein@geo.uzh.ch>
  * New function "Tools>Generate>Create Point Layer from Attribute Table..." to generate 
    a point layer based on 2 attribute fields. The function can be used to convert 
    items in a read CSV file/table into a point layer. 
    - new class: PointLayerFromAttributeTablePlugIn  
    
2012-09-29 mmichaud <michael.michaud@free.fr>
  * DataSourceFileLayerLoader : last commit broke the setReadonly instruction
    applied on compressed files. This is now fixed.
  * Modify SaveDatasetsPlugIn so that it can save formats defined in drivers
    loaded from extensions (ex. dxf, geoconcept, kml)
  * SaveDatasetAsPlugIn now replace layer special characters by '_' to
    propose a valid file name in the file chooser

2012-09-26 mmichaud <michael.michaud@free.fr>
  * DataSourceFileLayerLoader : revert a change made a few months ago. Layer
    name has the file name *without* extension again. Did not yet revert for zip 
    files which still take the compressed file name (+ zip file name within 
    parenthesis) 

2012-09-25 ede
  * AbstractCursorTool:  work around "unable to draw first shape" due to 
    "java.lang.InternalError: 
      Unable to Stroke shape (attempt to validate Pipe with invalid SurfaceData)"

2012-09-24 ede
  * probably fix bug 3560708: Only .shp opened from zipped shapefile
    http://sourceforge.net/tracker/?func=detail&atid=679906&aid=3560708&group_id=118054

2012-09-24 mmichaud <michael.michaud@free.fr>
  * Small fix in SegmentStringsWithData2Features used by the NoderPlugIn

2012-09-22 mmichaud <michael.michaud@free.fr>
  * Update DXF driver to 0.7.8 (fix a bug preventing reading of TEXT entities)