@@ -1,6 +1,15 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
-2012-07-12 Matthias Scholz <ms@jammerhund.de>
+2012-09-30 sstein <sstein@geo.uzh.ch>
+  * Modified the I18N class to retrieve the English default string if
+    a received language string starts with "#T:". Accordingly I modified
+    all empty/not translated strings in all language property files
+    to start with that char-Sequence. This was done, so that not
+    translated text-keys will appear in each language file. Until now
+    several language missed keys to translate due to the need to sync
+    with the default language property file. 
+    
+2012-09-30 Matthias Scholz <ms@jammerhund.de>
   * fix bug 3573079 with the detachable attribute window. Plase read the comment
     in the DetachableInternalFrame.detach() method.
 
